--- a/style.css
+++ b/style.css
@@ -87,5 +87,32 @@
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    
+    background-color: #034c52;
+    box-shadow: 2px 2px 12px rgba (0.0.0.0.2);
+    padding: opx 5%;
+
+
  }       
+
+ .topo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+ }
+
+ .imagem{
+    height: 80vh;
+    width: auto;
+ }
+
+ .eu{
+    font-size: 4vw;
+    flex-direction: inherit;
+ }
+ .Experiência{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+
+ }
