--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
             --color-dark5: #015c63;
             --color-puple: #034c52;
         }
+
+
         *{
         margin: 0;
         padding: 0;
@@ -16,9 +18,10 @@
             font-family: Arial, Helvetica, sans-serif;
             background-color: var(--color-dark1);
             color: var(--color-white)
+
         }
         .img_logo_header{
-            width: 45px;
+            width: 10vw;
         }
         .header,
         .navigation_header{
@@ -98,6 +101,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
+    height: 100vh;
  }
 
  .imagem{
@@ -106,9 +111,15 @@
  }
 
  .eu{
-    font-size: 4vw;
-    flex-direction: inherit;
+    font-size: 3vw;
+    padding: 3%;
  }
+.textoeu{
+    text-align: justify;
+    font-size: 2vw;
+    padding: 3%;
+}
+
  .Experiência{
     display: flex;
     flex-direction: row;
