--- a/style.css
+++ b/style.css
@@ -121,12 +121,17 @@
 }
 
  .Experiência{
-    text-align: left;
-    
     font-size: 2vw;
-    padding: 3%;
+    padding: 2%;
+    text-align: justify;
+ }
+ .textoexperiencia{
+    font-size: 5vw;
+    padding: 2%;
+    text-align: right;
  }
  .Cursos{
     font-size: 2vw;
     padding: 2%;
+    .textocurs{}
  }
