--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
             background-color: var(--color-dark1);
-            color: var(--color-white)
-
+            color: var(--color-white);
+             
         }
         .img_logo_header{
             width: 10vw;
@@ -95,14 +95,13 @@
     padding: opx 5%;
 
 
- }       
-
- .topo{
+ }   
+  .topo{
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
-    height: 100vh;
+    width: 10%;
+    height: 10vh;
  }
 
  .imagem{
@@ -114,7 +113,7 @@
     font-size: 3vw;
     padding: 3%;
     text-align: justify;
-    font-weight: bolder;
+    
  }
 .textoeu{
     text-align: justify;
@@ -125,9 +124,7 @@
  .Experiência{
     font-size: 2vw;
     padding: 2%;
-    text-align: justify;
-    text-shadow: #034c52;
-    font-weight: bolder;
+    background-color: #015c63;
  }
  .textoexperiencia{
     font-size: 5vw;
@@ -138,9 +135,7 @@
  .Cursos{
     font-size: 2vw;
     padding: 2%;
-    text-align: justify;
-    text-decoration-color: #034c52;
-    font-weight: bolder;
+    background-color: #f48d79;
  }
  .textocurso{
     font-size: 2vw;
