--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
             font-family: Arial, Helvetica, sans-serif;
             background-color: var(--color-dark1);
             color: var(--color-white);
-             
         }
         .img_logo_header{
             width: 10vw;
@@ -90,11 +89,6 @@
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    background-color: #034c52;
-    box-shadow: 2px 2px 12px rgba (0.0.0.0.2);
-    padding: opx 5%;
-
-
  }   
   .topo{
     display: flex;
@@ -107,14 +101,7 @@
  .imagem{
     height: 80vh;
     width: auto; 
-    border: 8px solid var(--color-dark4);
-    box-shadow: 1px 1px 4px black;
     position: relative;
-    top: 0px;
-    background-color: rgba(0,0,0,.4) black;
-    color: white;
-
-
  }
 
  .eu{
@@ -127,6 +114,8 @@
     text-align: justify;
     font-size: 2vw;
     padding: 3%;
+    border: 8px solid var(--color-dark4);
+    box-shadow: 1px 1px 4px black;
 }
 
  .Experiência{
@@ -150,3 +139,26 @@
     padding: 2%;
     text-align: justify;
  }
+ .contato{
+    display: flex;
+    flex-direction: column;
+ }
+
+ .icones{
+    display: flex;
+    flex-direction: row;
+    margin-top: 5%;
+ }
+
+ .contato h1{
+    font-size: 4vw;
+    padding: 2%;
+ }
+
+ .emailicone{}
+
+ .telefoneinoce{}
+
+ .instaicone{}
+
+ .inicone{}
