--- a/style.css
+++ b/style.css
@@ -32,30 +32,28 @@
             background-color: var(--color-dark2);
             box-shadow: 1px 1px 4px var(--color-dark4);
             height: 56px;
-            justify-content: space-between;
-            padding: 0 10%;
+            justify-content: space-around;
+            position: fixed;
+            width: 100vw;
         }
         .navigation_header{
             gap: 3em;
-            z-index: 2;
+            z-index: 999;
+            
         }
         .navigation_header a{
             text-decoration: none;
             color: var(--color-puple);
             transition: 1s;
             font-weight: bold;
+
         }
         .active{
             background-color: var(--color-dark3);
             padding: 10px;
             border-radius: 10px;
         }
-        .content{
-            text-align: center;
-            padding-top: 5em;
-            height: 100vh;
-            transition: 1s;
-        }
+    
         .btn.icon_header{
             background-color: transparent;
             border: none;
@@ -90,55 +88,59 @@
     align-items: center;
     height: 60px;
  }   
-  .topo{
+
+ .tela1{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    width: 10%;
-    height: 10vh;
- }
-
- .imagem{
-    height: 80vh;
-    width: auto; 
-    position: relative;
+    max-height: 100vh;
  }
 
  .eu{
-    font-size: 3vw;
-    padding: 3%;
-    text-align: justify;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5%; 
  }
-.textoeu{
-    text-align: justify;
-    font-size: 2vw;
-    padding: 3%;
-    border: 8px solid var(--color-dark4);
-    box-shadow: 1px 1px 4px black;
+
+.tituloeu{
+    font-size: 5vw;
+    
 }
 
- .Experiência{
-    font-size: 2vw;
-    padding: 2%;
-    background-color: #015c63;
- }
- .textoexperiencia{
-    font-size: 3vw;
-    padding: 2%;
+.textoeu{
     text-align: justify;
-    
- }
- .Cursos{
-    font-size: 2vw;
-    padding: 2%;
-    background-color: #f48d79;
- }
- .textocurso{
-    font-size: 2vw;
-    padding: 2%;
-    text-align: justify;
- }
+    font-size: 1.5vw;
+}
+
+.imagem{
+    padding: 5%;
+    height: 80vh;
+    width: auto;
+    -webkit-filter: drop-shadow(5px 10px 20px #222);
+    filter: drop-shadow(5px 15px 10px #222);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  .contato{
     display: flex;
     flex-direction: column;
