--- a/style.css
+++ b/style.css
@@ -228,3 +228,12 @@ html{
     width: auto;
 
  }
+ .imagem3{
+    max-width: 50vw;
+    padding: 5%;
+    height: 50vh;
+    width: auto;
+    -webkit-filter: drop-shadow(5px 10px 20px #222);
+    filter: drop-shadow(5px 15px 10px #222);
+    margin: 0 auto;
+ }
