--- a/style.css
+++ b/style.css
@@ -1,239 +1,199 @@
-html{
-    scroll-behavior: smooth;
-}
+    html{
+        scroll-behavior: smooth;
+    }
 
-        :root{
-            --color-white: #fff;
-            --color-dark1: #ffc0b4;
-            --color-dark2: #fda898;
-            --color-dark3: #f48d79;
-            --color-dark4: #017075;
-            --color-dark5: #015c63;
-            --color-puple: #034c52;
-        }
+    :root{
+        --color-white: #fff;
+        --color-dark1: #ffc0b4;
+        --color-dark2: #fda898;
+        --color-dark3: #f48d79;
+        --color-dark4: #017075;
+        --color-dark5: #015c63;
+        --color-puple: #034c52;
+    }
 
-        *{
-        margin: 0;
-        padding: 0;
-        }
+    *{
+    margin: 0;
+    padding: 0;
+    }
 
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: var(--color-dark1);
-            color: var(--color-white);
-        }
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: var(--color-dark1);
+        color: var(--color-white);
+    }
 
-        body div{
-            height: 100vh;
-        }
+    body div{
+        height: 100vh;
+    }
 
-        .img_logo_header{
-            width: 10vw;
-        }
+    .header, .navigation_header{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 
-        .header,
-        .navigation_header{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-        }
+    .header{
+        background-color: var(--color-puple);
+        box-shadow: 1px 1px 4px var(--color-dark4);
+        height: 56px;
+        justify-content: space-around;
+        position: fixed;
+        width: 100vw;
+        z-index: 999;
+    }
+    .navigation_header{
+        gap: 3em;
+        z-index: 999;
+        
+    }
+    .navigation_header a{
+        text-decoration: none;
+        color: var(--color-puple);
+        transition: 1s;
+        font-weight: bold;
 
-        .header{
-            background-color: var(--color-puple);
-            box-shadow: 1px 1px 4px var(--color-dark4);
-            height: 56px;
-            justify-content: space-around;
-            position: fixed;
-            width: 100vw;
-            z-index: 999;
-        }
-        .navigation_header{
-            gap: 3em;
-            z-index: 999;
-            
-        }
-        .navigation_header a{
-            text-decoration: none;
-            color: var(--color-puple);
-            transition: 1s;
-            font-weight: bold;
+    }
+    .active{
+        background-color: var(--color-dark3);
+        padding: 10px;
+        border-radius: 10px;
+    }
 
-        }
-        .active{
-            background-color: var(--color-dark3);
-            padding: 10px;
-            border-radius: 10px;
-        }
+    .tela1{
+        display: flex;
+        flex-direction: row;
+        max-height: 100vh;
+        justify-content: space-between;
+    }
+
+    .eu{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 5%; 
+    }
+
+    .tituloeu{
+        font-size: 5vw;
+        font-weight: bold;
+    }
+
+    .textoeu{
+        text-align: justify;
+        font-size: 1.5vw;
+    }
+
+    .imagem{
+        padding: 5%;
+        height: 80vh;
+        width: auto;
+        -webkit-filter: drop-shadow(5px 10px 20px #222);
+        filter: drop-shadow(5px 15px 10px #222);
+        margin-top: 3vh;
+    }
+
+    .tela2{
+        display: flex;
+        flex-direction: row-reverse;
+        width: 100vw;
+        justify-content: space-between;
+    }
+
+    .imagem2{
+        padding: 5%;
+        height: 50vh;
+        width: auto;
+        -webkit-filter: drop-shadow(5px 10px 20px #222);
+        filter: drop-shadow(5px 15px 10px #222);
+    }
+
+    .texto2{
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+        padding: 5%;
+        font-size: 1.5vw;
+    }
+
+    .tituloexperiencia{
+        font-size: 3vw;
+        font-weight: bold;
+    }
+
+    .textoesperiencia{
+        text-align: justify;
+        font-size: 1.5vw;
+    }
+
+    .tela3{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .titulocurso{
+        font-size: 5vw;
+        font-weight: bold;
+    }
+
+    .textocurso{
+        font-size: 1.5vw;
+    }
+
+    .tela4{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+
+    .icones{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100vw;
+        height: auto;
+        margin-top: 10vh;
+    }
+
+    .titulocontato{
+        font-size: 3vw;
+        font-weight: bold;
+    }
+
+    .emailicone{
+        height: 20vh;
+        width: auto; 
+
+    }
+    .telefoneicone{
+        height: 20vh;
+        width: auto; 
     
-        .btn.icon_header{
-            background-color: transparent;
-            border: none;
-            color: var(--color-white);
-            cursor: pointer;
-            display: none;
-        }
-        @media screen and (max-width: 768px) {
-            .btn.icon_header{
-                display: block;
-            }
-            .navigation_header{
-                position: absolute;
-                flex-direction: column;
-                top: 0;
-                background-color: var(--color-dark5);
-                height: 100%;
-                width: 35vw;
-                padding: 1em;
-                animation-duration: 1s;
-                margin-left: -10vw;
-            }
-        }
-        @keyframes showSidebar{
-            from{margin-left: -100vw;}
-            top{margin-left: -10vw;}
-        }
- nav
- {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
- }   
+    }
+    .instaicone{
+        height: 20vh;
+        width: auto; 
+    }
+    .inicone{
+        height: 20vh;
+        width: auto; 
+    }
+    .home{
+        padding: 5%;
+        height: 50vh;
+        width: auto;
 
- .tela1{
-    display: flex;
-    flex-direction: row;
-    max-height: 100vh;
-    justify-content: space-between;
- }
-
- .eu{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 5%; 
- }
-
-.tituloeu{
-    font-size: 5vw;
-    font-weight: bold;
-}
-
-.textoeu{
-    text-align: justify;
-    font-size: 1.5vw;
-}
-
-.imagem{
-    padding: 5%;
-    height: 80vh;
-    width: auto;
-    -webkit-filter: drop-shadow(5px 10px 20px #222);
-    filter: drop-shadow(5px 15px 10px #222);
-    margin-top: 3vh;
-}
-
-.tela2{
-    display: flex;
-    flex-direction: row-reverse;
-    width: 100vw;
-    justify-content: space-between;
-}
-
-.imagem2{
-    padding: 5%;
-    height: 50vh;
-    width: auto;
-    -webkit-filter: drop-shadow(5px 10px 20px #222);
-    filter: drop-shadow(5px 15px 10px #222);
-}
-
-.texto2{
-    display: flex;
-    flex-direction: column;
-    text-align: right;
-    padding: 5%;
-    font-size: 1.5vw;
-}
-
-.tituloexperiencia{
-    font-size: 3vw;
-    font-weight: bold;
-}
-
-.textoesperiencia{
-    text-align: justify;
-    font-size: 1.5vw;
-}
-
-.tela3{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-
-.titulocurso{
-    font-size: 5vw;
-    font-weight: bold;
-}
-
-.textocurso{
-    font-size: 1.5vw;
-}
-
-.tela4{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-}
-
-.icones{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100vw;
-    height: auto;
-    margin-top: 10vh;
-}
-
-.titulocontato{
-    font-size: 3vw;
-    font-weight: bold;
-}
-
- .emailicone{
-    height: 20vh;
-    width: auto; 
-
- }
- .telefoneicone{
-    height: 20vh;
-    width: auto; 
- 
- }
- .instaicone{
-    height: 20vh;
-    width: auto; 
- }
- .inicone{
-    height: 20vh;
-    width: auto; 
- }
- .home{
-    padding: 5%;
-    height: 50vh;
-    width: auto;
-
- }
- .imagem3{
-    max-width: 50vw;
-    padding: 5%;
-    height: 50vh;
-    width: auto;
-    -webkit-filter: drop-shadow(5px 10px 20px #222);
-    filter: drop-shadow(5px 15px 10px #222);
-    margin: 0 auto;
- }
+    }
+    .imagem3{
+        max-width: 50vw;
+        padding: 5%;
+        height: 50vh;
+        width: auto;
+        -webkit-filter: drop-shadow(5px 10px 20px #222);
+        filter: drop-shadow(5px 15px 10px #222);
+        margin: 0 auto;
+    }
